# claude-code-notifications

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUG_LOGGING.md  LICENSE  MULTI_INSTANCE_SUPPORT.md  Makefile  README.md  build.rs  test_hook_field.rs  test_icon.rs
examples/: USAGE.md  claude-code-config-all-channels.json  claude-code-config-all-hooks.json  claude-code-config-pretooluse.json  claude-code-config-with-sound.json  claude-code-config.json  debug-config.json  multi-instances-config.json  quickstart.md  test.sh
src/: analyzer.rs  error.rs  hooks.rs  lib.rs  logging.rs  main.rs  router.rs  summary.rs  transcript.rs
src/channels/: dingtalk.rs  feishu.rs  mod.rs  system.rs  trait.rs  webhook.rs  wechat.rs
src/config/: loader.rs  mod.rs  schema.rs  templates.rs
src/web/: mod.rs  server.rs
static/: app.js  index.html  styles.css
